Fix navbar clipping e miglioramento CLS hero section
- Risolto clipping del selettore lingua e bottone Contattaci rimuovendo contain: layout style dalla navbar
- Ridotte dimensioni bottone Contattaci e selettori lingua su desktop per layout più compatto
- Sostituita soluzione CLS rigida (700px fissi) con layout flessibile basato su min-height calcolati
- Migliorata responsività della hero section con altezze adattive alla viewport
- Aggiornate informazioni aziende partner nelle sezioni dedicate dei servizi
- Ottimizzato design sezioni partner con layout a griglia e stili migliorati

--- a/fix-grate-inferriate-icons.css
+++ b/fix-grate-inferriate-icons.css
@@ -1,6 +1,6 @@
 /* Fix per le icone sproporzionate nelle sezioni Caratteristiche Tecniche e Processo di Installazione */
 
-/* Override specifico per le icone emoji nelle sezioni serramenti */
+/* Override specifico per le icone emoji nelle sezioni grate e inferriate */
 .feature-icon {
     font-size: 3rem !important;
     width: 80px !important;
